<resources>
    <string name="app_name">Free Speech</string>
    <string name="about_activity_about_text">Free Speech for Android is an open source tool designed to help people communicate.  The demo data available from the "Tools" menu provides basic help information and an overview of the available features.  For more information, please visit the project home page or leave the developer feedback using the buttons at right.</string>
    <string name="about_activity_crash_button_label">Generate Crash</string>
    <string name="about_activity_feedback_button_label">Feedback</string>
    <string name="about_activity_label">About</string>
    <string name="about_activity_close_button_label">Close</string>
    <string name="about_activity_more_info_button_label">Visit Web Site</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_done">Done</string>
    <string name="button_save">Save</string>
    <string name="cache_update_service_label">Free Speech Cache Update Service</string>
    <string name="cache_progress_bar_label">Updating Free Speech TTS cache...</string>
    <string name="cache_service_controller_label">Free Speech Cache Update Service Controller</string>
    <string name="cache_control_enabled">TTS caching is currently enabled.</string>
    <string name="cache_control_disabled">TTS caching is currently disabled.</string>
    <string name="color_picker_activity_instructions">Select Color</string>
    <string name="color_picker_activity_selected_label">Selected</string>
    <string name="color_picker_activity_set_transparent_button_label">Set to Transparent</string>
    <string name="color_picker_activity_cancel_button_label">Cancel</string>
    <string name="color_picker_activity_save_button_label">Save</string>
    <string name="exception_catcher_activity_label">Error</string>
    <string name="edit_button_do_heading">What to Do</string>
    <string name="edit_button_do_change_tab">Change tab when button is pressed:</string>
    <string name="edit_button_label">Edit Button</string>
    <string name="edit_button_say_heading">What to Say</string>
    <string name="edit_button_say_record_sound_label">Record Sound</string>
    <string name="edit_button_say_pick_sound_label">File</string>
    <string name="edit_button_say_text_label">Speak Text:</string>
    <string name="edit_button_say_text_undefined">Touch to enter text.</string>
    <string name="edit_button_say_text_current_text">No TTS Text Defined</string>
    <string name="edit_button_say_sound_label">Play Sound:</string>
    <string name="edit_button_say_sound_current_sound">No Sound File Selected</string>
    <string name="edit_button_show_heading">What to Show</string>
    <string name="edit_button_show_label_label">Label:</string>
    <string name="edit_button_show_label_undefined">Touch to enter label.</string>
    <string name="edit_button_show_label_current_label">No Label Defined</string>
    <string name="edit_button_show_pick_image_label">File</string>
    <string name="edit_button_show_image_label">Image:</string>
    <string name="edit_button_show_camera_label">Take a Picture</string>
    <string name="edit_button_show_gallery_label">Gallery</string>
    <string name="edit_button_show_color_label">Color:</string>
    <string name="edit_tab_background_color_label">Background Color:</string>
    <string name="edit_tab_label_label">Tab Label:</string>
    <string name="edit_tab_label_hint">Enter Tab Label</string>
    <string name="edit_text_default_label">Edit Text:</string>
    <string name="edit_text_preview_default_text">Selected</string>
    <string name="exception_catcher_exception_label">There was an unexpected error that caused "Free Speech" to exit.  Your crash data has already been sent to the developers.  If you have additional comments about what you were doing, please take a moment to leave feedback so we can fix the problem!</string>
    <string name="exception_catcher_feedback_button_label">Yes, Leave Feedback</string>
    <string name="exception_catcher_default_exception_body">No error message found...</string>
    <string name="exception_catcher_close_button_label">No, Don\'t Leave Feedback</string>
    <string name="feedback_activity_label">Leave Feedback</string>
    <string name="keyboard_activity_label">Type to Talk</string>
    <string name="keyboard_say_it">Say It Now</string>
    <string name="keyboard_history_label">History</string>
    <string name="keyboard_history_instructions">Click an item to load its text.  Long click to turn an item into a button.</string>
    <string name="keyboard_history_instructions_no_edit">Click an item to load its text.</string>
    <string name="keyboard_exit">Exit</string>
    <string name="move_activity_label">Move Button</string>
    <string name="menu_add_button_label">Add Button</string>
    <string name="menu_add_label">Add</string>
    <string name="menu_add_tab_label">Add Tab</string>
    <string name="menu_delete_tab_label">Delete Tab</string>
    <string name="menu_edit_tab_label">Edit Tab</string>
    <string name="menu_keyboard_label">Keyboard</string>
    <string name="menu_sort_buttons_label">Sort Buttons</string>
    <string name="menu_sort_tabs_label">Sort Tabs</string>
    <string name="menu_sort_label">Sort</string>
    <string name="menu_tools_label">Tools</string>
    <string name="menu_preferences_label">Preferences</string>
    <string name="menu_about_label">About</string>
    <string name="menu_quit_label">Quit</string>
    <string name="menu_feedback_label">Feedback</string>
    <string name="preferences_allow_editing_label">Allow Editing</string>
    <string name="preferences_allow_editing_summary">Allow users to add, change and remove buttons.</string>
    <string name="preferences_columns_label">Number of Columns</string>
    <string name="preferences_columns_summary">The number of columns of buttons to display.  The more columns, the narrower the buttons.</string>
    <string name="preferences_dev_category_title">Advanced Options</string>
    <string name="preferences_dev_category_summary">Development and debugging options (not recommended for most users).</string>
    <string name="preferences_dev_options_label">Developer Options</string>
    <string name="preferences_dev_options_summary">Enable developer options (not recommended).</string>
    <string name="preferences_full_screen_label">Full Screen</string>
    <string name="preferences_full_screen_summary">Enable this option to hide the notification bar.  Untick this (for example) if you\'re using a device that lacks physical buttons, and need to leave an on-screen nav bar visible.</string>
    <string name="preferences_hide_tab_controls_label">Hide Tab Controls</string>
    <string name="preferences_hide_tab_controls_summary">Hide the tab controls at the top of the screen.  This is only meant to be used if you have either a single tab or have enabled swiping to change tabs.</string>
    <string name="preferences_orientation_label">Screen Orientation</string>
    <string name="preferences_orientation_summary">The orientation to use when displaying the interface.  Set to "auto" if you want to be able to change the orientation based on the sensors.</string>
    <string name="preferences_rows_label">Number of Rows</string>
    <string name="preferences_rows_summary">The number of rows of buttons to display on a single screen without scrolling.  The more rows, the shorter the buttons.</string>
    <string name="preferences_save_tts_label">Save TTS to Files</string>
    <string name="preferences_save_tts_summary">Enable this option to save text-to-speech utterances to sound files.  Improves smoothness of playback on slower devices, but requires storage space.</string>
    <string name="preferences_scale_text_label">Scale Text Width</string>
    <string name="preferences_scale_text_summary">Enable this option to scale the width of text to fill each button.</string>
    <string name="preferences_sound_category_title">Sound and TTS</string>
    <string name="preferences_sound_category_summary">Audio and text-to-speech (TTS) settings.</string>
    <string name="preferences_swipe_tabs_label">Swipe to Change Tabs</string>
    <string name="preferences_swipe_tabs_summary">Enable this to change tabs using swipe gestures.</string>
    <string name="preferences_ui_category_title">User Interface</string>
    <string name="preferences_ui_category_summary">Preferences that control the look and feel of the user interface.</string>
    <string name="preferences_tts_voice_label">Voice</string>
    <string name="preferences_tts_voice_summary">Which installed voice to use for Text-to-Speech (TTS).</string>
    <string name="sort_buttons_activity_label">Sort Buttons</string>
    <string name="sort_tabs_activity_label">Sort Tabs</string>
    <string name="startup_activity_splash_text">Welcome to Free Speech for Android</string>
    <string name="tools_delete_data">Delete All Data</string>
    <string name="tools_exit">Exit Tools</string>
    <string name="tools_load_data">Load Data</string>
    <string name="tools_load_default_data">Reset to Default Data</string>
    <string name="tools_load_demo_data">Reset to Demo Data</string>
    <string name="tools_manage_tts_cache">Manage TTS Cache</string>
    <string name="tools_save_data">Save Data</string>
    <string name="fs.actions.label">Actions</string>
    <string name="fs.am.label">Am</string>
    <string name="fs.am.tts">Am</string>
    <string name="fs.and.label">And</string>
    <string name="fs.and.tts">and</string>
    <string name="fs.angry.label">Angry</string>
    <string name="fs.angry.tts">Angry</string>
    <string name="fs.are.label">Are</string>
    <string name="fs.are.tts">are</string>
    <string name="fs.bathroom.label">Bathroom</string>
    <string name="fs.bedroom.label">Bedroom</string>
    <string name="fs.bored.label">Bored</string>
    <string name="fs.bored.tts">Bored</string>
    <string name="fs.can.label">Can</string>
    <string name="fs.can.tts">can</string>
    <string name="fs.clean.up.label">Clean Up</string>
    <string name="fs.clean.up.tts">clean up</string>
    <string name="fs.cold.label">Cold</string>
    <string name="fs.cold.tts">Cold</string>
    <string name="fs.dad.label">Dad</string>
    <string name="fs.dad.tts">Dad</string>
    <string name="fs.drink.label">Drink</string>
    <string name="fs.drink.tts">Drink</string>
    <string name="fs.eat.label">Eat</string>
    <string name="fs.eat.tts">Eat</string>
    <string name="fs.excited.label">Excited</string>
    <string name="fs.excited.tts">excited</string>
    <string name="fs.feelings.label">Feelings</string>
    <string name="fs.frustrated.label">Frustrated</string>
    <string name="fs.frustrated.tts">Frustrated</string>
    <string name="fs.go.label">Go</string>
    <string name="fs.go.tts">go</string>
    <string name="fs.happy.label">Happy</string>
    <string name="fs.happy.tts">Happy</string>
    <string name="fs.he.label">He</string>
    <string name="fs.he.tts">He</string>
    <string name="fs.help.label">Help</string>
    <string name="fs.help.tts">Help</string>
    <string name="fs.home.label">Home</string>
    <string name="fs.home.tts">Home</string>
    <string name="fs.hot.label">Hot</string>
    <string name="fs.hot.tts">Hot</string>
    <string name="fs.how.label">How?</string>
    <string name="fs.how.many.label">How many?</string>
    <string name="fs.how.many.tts">How many?</string>
    <string name="fs.how.much.label">How much?</string>
    <string name="fs.how.much.tts">How much?</string>
    <string name="fs.how.tts">How?</string>
    <string name="fs.hungry.label">Hungry</string>
    <string name="fs.hungry.tts">Hungry</string>
    <string name="fs.hurt.label">Hurt</string>
    <string name="fs.hurt.tts">hurt</string>
    <string name="fs.i.dont.know.label">I Don\'t Know</string>
    <string name="fs.i.dont.know.tts">I Don\'t Know</string>
</resources>