<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  >
	<TextView
		android:text="@string/exception_catcher_exception_label"
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content"
		  android:layout_weight="1"
		  android:padding="10dp"
		  android:layout_margin="20dp"
		  android:background="@drawable/darkgrayoutline"
	/>

	<Button
		  android:layout_gravity="left"
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content"
		android:id="@+id/exception_catcher_feedback_button"
		android:text="@string/exception_catcher_feedback_button_label"
		  android:layout_weight="1"
	/>
	<Button
		  android:layout_gravity="right"
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content"
		android:id="@+id/exception_catcher_close_button"
		android:text="@string/exception_catcher_close_button_label"
		  android:layout_weight="1"
	/>
</LinearLayout>
