<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/darkgrayoutline"
    android:orientation="vertical"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/edit_button_say_text_label" />

        <EditText
            android:id="@+id/editButtonEditTtsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textMultiLine" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_button_say_sound_label" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/editButtonCurrentSound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/edit_button_say_sound_current_sound" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2" >

                <ImageButton
                    android:id="@+id/editButtonMicrophoneButton"
                    android:layout_width="match_parent"
                    android:layout_height="40dip"
                    android:layout_weight="1"
                    android:contentDescription="@string/edit_button_say_record_sound_label"
                    android:src="@android:drawable/ic_btn_speak_now" />

                <Button
                    android:id="@+id/editButtonSoundFileButton"
                    android:layout_width="match_parent"
                    android:layout_height="40dip"
                    android:layout_weight="1"
                    android:text="@string/edit_button_say_pick_sound_label" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>