<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/keyboard_activity_label"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/keyboardActivityTextEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:lines="2" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/keyboardActivitySayButton"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:text="@string/keyboard_say_it" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keyboard_history_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/keyboardHistoryInstructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keyboard_history_instructions"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ListView
                android:id="@+id/keyboardHistoryListView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/darkgrayoutline"
                android:padding="10dp" >
            </ListView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1" >
                </LinearLayout>

                <Button
                    android:id="@+id/keyboardExitButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/keyboard_exit" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>