<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2012-2013 Tony Atkins <duhrer@gmail.com>. All rights reserved.

    Redistribution and use in source and binary forms, with or without modification, are
    permitted provided that the following conditions are met:

       1. Redistributions of source code must retain the above copyright notice, this list of
          conditions and the following disclaimer.

       2. Redistributions in binary form must reproduce the above copyright notice, this list
          of conditions and the following disclaimer in the documentation and/or other materials
          provided with the distribution.

    THIS SOFTWARE IS PROVIDED BY Tony Atkins ''AS IS'' AND ANY EXPRESS OR IMPLIED
    WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND
    FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL Tony Atkins OR
    CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
    CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
    SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
    ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
    NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
-->
<!-- FIXME: Migrate all text to strings.xml for internationalization. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_button_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="2dp"
    android:scrollbars="vertical" >

    <LinearLayout
        android:id="@+id/editButtonTitlePreviewLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/editButtonLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/edit_button_label"
            android:textSize="30dp" >
        </TextView>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/darkgrayoutline"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_button_say_heading"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/darkgrayoutline"
                android:orientation="vertical"
                android:padding="5dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/edit_button_say_text_label" />

                    <EditText
                        android:id="@+id/editButtonEditTtsText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="textMultiLine" >
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/edit_button_say_sound_label" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_horizontal"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/editButtonCurrentSound"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/edit_button_say_sound_current_sound" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2" >

                            <ImageButton
                                android:id="@+id/editButtonMicrophoneButton"
                                android:layout_width="match_parent"
                                android:layout_height="40dip"
                                android:layout_weight="1"
                                android:contentDescription="@string/edit_button_say_record_sound_label"
                                android:src="@android:drawable/ic_btn_speak_now" />

                            <Button
                                android:id="@+id/editButtonSoundFileButton"
                                android:layout_width="match_parent"
                                android:layout_height="40dip"
                                android:layout_weight="1"
                                android:text="@string/edit_button_say_pick_sound_label" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/edit_button_show_heading"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/darkgrayoutline"
                android:orientation="vertical"
                android:padding="5dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/edit_button_show_label_label" />

                    <EditText
                        android:id="@+id/editButtonEditLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:maxLines="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/edit_button_show_color_label" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <com.blogspot.tonyatkins.freespeech.view.ColorSwatch
                            android:id="@+id/buttonBgColorColorSwatch"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/darkgrayoutline" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/edit_button_show_image_label" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/darkgrayoutline" >

                        <ImageView
                            android:id="@+id/editButtonImage"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:scaleType="fitCenter"
                            android:src="@android:drawable/ic_menu_gallery" />

                        <RelativeLayout
                            android:id="@+id/RelativeLayout1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >

                            <LinearLayout
                                android:id="@+id/LinearLayout1"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_alignParentLeft="true"
                                android:layout_centerVertical="true"
                                android:orientation="vertical" >

                                <ImageButton
                                    android:id="@+id/editButtonCameraButton"
                                    android:layout_width="40dip"
                                    android:layout_height="40dip"
                                    android:contentDescription="@string/edit_button_show_camera_label"
                                    android:scaleType="fitXY"
                                    android:src="@android:drawable/ic_menu_camera" />

                                <ImageButton
                                    android:id="@+id/editButtonGalleryButton"
                                    android:layout_width="40dip"
                                    android:layout_height="40dip"
                                    android:contentDescription="@string/edit_button_show_gallery_label"
                                    android:scaleType="fitXY"
                                    android:src="@android:drawable/ic_menu_gallery" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/editButtonImageAdjustmentControls"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_alignWithParentIfMissing="true"
                                android:layout_centerVertical="true"
                                android:gravity="right"
                                android:orientation="vertical" >

                                <ImageButton
                                    android:id="@+id/editButtonCropButton"
                                    android:layout_width="40dip"
                                    android:layout_height="40dip"
                                    android:src="@android:drawable/ic_menu_crop" />

                                <ImageButton
                                    android:id="@+id/editButtonRotateClockwiseButton"
                                    android:layout_width="40dip"
                                    android:layout_height="40dip"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/rotate_cw" />

                                <ImageButton
                                    android:id="@+id/editButtonRotateCounterClockwiseButton"
                                    android:layout_width="40dip"
                                    android:layout_height="40dip"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/rotate_ccw" />
                            </LinearLayout>
                        </RelativeLayout>
                    </FrameLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/edit_button_do_heading"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/darkgrayoutline"
                android:orientation="vertical"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_button_do_warning" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonPanelLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonPanelCancelButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_cancel" >
        </Button>

        <Button
            android:id="@+id/buttonPanelSaveButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_save" >
        </Button>
    </LinearLayout>

</LinearLayout>